# foryou-ml-pipeline

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
generation/: pipeline.py
moderation/: scanner.py
shared/: config.py  consent_client.py  dynamodb_client.py  logger.py  s3_client.py  sqs_consumer.py
tests/: test_config.py  test_consent_client.py  test_dynamodb_client.py  test_image_validator.py  test_s3_client.py  test_sqs_consumer.py  test_watermark_robustness.py
training/: image_validator.py  pipeline.py
watermark/: image_watermark.py  train_videoseal.py  video_watermark.py
