[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foryou-ml-pipeline"
version = "0.1.0"
description = "ForYou ML pipeline — avatar training, dual-track content generation, moderation, and watermarking"
requires-python = ">=3.11"
license = { text = "UNLICENSED" }

dependencies = [
    # AWS
    "boto3",
    # PyTorch ecosystem
    "torch",
    "torchvision",
    # Diffusion models
    "diffusers",
    "transformers",
    "accelerate",
    "peft",
    "safetensors",
    # Image / video processing
    "Pillow",
    "opencv-python",
    "opencv-contrib-python",
    "numpy",
    # Face detection (training preprocessing)
    "insightface",
    "onnxruntime",
    # Watermarking
    "PyWavelets",
    "scipy",
    # Configuration
    "pydantic",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff>=0.4",
    "mypy",
]
ocr = [
    "pytesseract",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["training*", "generation*", "moderation*", "watermark*", "shared*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N812"]  # Allow `import torch.nn.functional as F` (PyTorch convention)

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
